# ArcadeInterface

./: .gitignore  Makefile  Professional Developer Design Document_ IoT-Enabled Arcade Button Array for API Event Orchestration.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
arcade_interface/: __init__.py
src/: index.js
test/: index.js
tests/: test_arcade.py
