[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcade-interface"
version = "0.1.0"
description = "IoT-Enabled Arcade Button Array for API Event Orchestration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Matthew Chapdelaine"}
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "mypy"]

[tool.setuptools]
packages = ["arcade_interface"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
